[package]
name = "interactive_wasm_raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
wgpu = "23"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 2 # Fast and small wasm

[profile.dev.package."*"]
opt-level = 2
